--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,8 @@ padding: 0%;
 -webkit-background-size: cover;
 background-size: cover;
 margin: auto;
+width: 100%;
+height: 100%;
 }
     #home h1 {
         padding:150px 20px 20px 0px;
