--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,7 @@ background-size: cover;
 margin: auto;
 width: 100%;
 height: 100%;
+background-size: contain;
 }
     #home h1 {
         padding:150px 20px 20px 0px;
