--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,14 +112,14 @@ background-color: #fff;
  HOME SECTION
     ===================================*/
 #home{
-position: relative;
 background: url(../img/banner.jpg) no-repeat center center;
 padding: 0%;
 -webkit-background-size: cover;
 background-size: cover;
 margin: auto;
-width: 100%;
+max-width: 100%;
 height: 100%;
+position: relative;
 background-size: contain;
 }
     #home h1 {
