--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ padding: 0%;
 background-size: cover;
 margin: auto;
 max-width: 100%;
-height: 100%;
+height: auto;
 position: relative;
 background-size: contain;
 }
