--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,9 +115,8 @@ background-color: #fff;
 background: url(../img/banner.jpg) no-repeat center center;
 padding: 0%;
 -webkit-background-size: cover;
-background-size: cover;
-width: 100%;
-height: auto;
+background-size: 100%;
+
 
 
 
