--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ background: url(../img/banner.jpg) no-repeat center center;
 padding: 0%;
 -webkit-background-size: cover;
 background-size: 100%;
-
+position: absolute;
 
 
 
