--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,10 +113,11 @@ background-color: #fff;
     ===================================*/
 #home{
 background: url(../img/banner.jpg) no-repeat center center;
-padding: 0%;
--webkit-background-size: cover;
-background-size: 100%;
-
+display: block;
+    height: 400px;
+    max-width: 100% !important;
+    position: relative;
+    background-size: contain;
 
 
 
@@ -194,7 +195,7 @@ margin-bottom: 30px;
 #about {
     color: #fff;
      background-color: #000; 
-     padding-top: 80px;
+     padding-top: 20px;
 }
 .big-icon {
     font-size:250px;
